web-push/app/namespace.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: samples-web-push
  labels:
    name: samples-web-push
