web-push/app/web-push.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: web-push
  namespace: samples-web-push
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: web-push
    spec:
      containers:
      - name: web-push
        image: web-push:0.1
        ports:
        - containerPort: 7000
        volumeMounts:
        - mountPath: "/var/log/nginx"
          name: web-push
      volumes:
        - name: web-push
          persistentVolumeClaim:
            claimName: web-push
---
apiVersion: v1
kind: Service
metadata:
  name: web-push
  namespace: samples-web-push
spec:
  type: NodePort
  ports:
  - protocol: TCP
    port: 7000
    targetPort: 7000
    name: http
  selector:
    app: web-push
